Fix horizontal CM overflow

--- a/packages/dashql-app/src/view/workbook/codemirror.css
+++ b/packages/dashql-app/src/view/workbook/codemirror.css
@@ -1,7 +1,7 @@
 .cm-scroller {
     max-height: 100%;
     max-width: 100%;
-    overflow: auto;
+    overflow: hidden;
 }
 .cm-editor {
     height: 100%;
