--- a/packages/dashql-app/src/view/workbook/editor.module.css
+++ b/packages/dashql-app/src/view/workbook/editor.module.css
@@ -16,7 +16,7 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
     grid-template-rows: 32px calc(100% - 32px);
 }
 
@@ -49,15 +49,9 @@
     pointer-events: none;
 }
 
-.editor_with_loader {
+.editor {
     grid-row: 2;
     grid-column: 1;
-    display: grid;
-    grid-template-columns: auto max-content;
-    grid-template-rows: 100%;
-}
-
-.editor {
     height: 100%;
     width: 100%;
     background-color: white;
