--- a/packages/dashql-app/src/view/workbook/workbook_page.module.css
+++ b/packages/dashql-app/src/view/workbook/workbook_page.module.css
@@ -30,6 +30,7 @@
         display: flex;
         flex-direction: column;
         background-color: white;
+        overflow: hidden;
     }
     .header_action_container {
         grid-column: 4;
@@ -92,6 +93,7 @@
         display: flex;
         flex-direction: column;
         background-color: white;
+        overflow: hidden;
     }
     .action_sidebar {
         border-left: 1px solid var(--border_color_primary);
@@ -152,8 +154,9 @@
 
 .editor_container {
     flex: 1;
-    overflow: hidden;
     border-bottom: 1px solid var(--border_color_primary);
+    width: 100%;
+    height: 100%;
 }
 
 .editor_card {
